invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_10.src
.IPPcode24
SUB int@49